discussion/kv_engine/174251/174251_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add RangeScanMore status code

If a RangeScan 'continue' stops because of a limit this
status code signals to the user that more data is available
and they should issue another continue.

Change-Id: I44de4868882188be98000a405036d2690564b713

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-27 13:07:23.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 13:09:18.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45718/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45718/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6716/ : ABORTED

Compile error at [2022-04-27T13:08:55.373Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/utilities/engine_errc_2_mcbp.cc:83:23:
error: no member named "range_scan_more" in "cb::engine_errc"; did you mean "range_scan_mode"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6716/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6716/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18845/ : ABORTED

Compile error at [2022-04-27T13:09:02.858Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/utilities/engine_errc_2_mcbp.cc:83:23:
error: ?range_scan_more? is not a member of ?cb::engine_errc?; did you mean ?range_scan_mode??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18845/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18845/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27262/ : ABORTED

Compile error at [2022-04-27T13:08:52.530Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/utilities/engine_errc_2_mcbp.cc:83:23:
error: no member named "range_scan_more" in "cb::engine_errc"; did you mean "range_scan_mode"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27262/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27262/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6809/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6809/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38399/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/utilities/engine_error.cc:43:13:
error: enumeration value "range_scan_mode" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38399/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17060/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection.cc:379:27: error: no member named "range_scan_more" in "cb::engine_errc"; did you mean "range_scan_mode"? [clang-diagnostic-error]
    case cb::engine_errc::range_scan_more:
                          ^~~~~~~~~~~~~~~
                          range_scan_mode
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/engine_error.h:134:5: note: "range_scan_mode" declared here
    range_scan_mode = 0x27,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/engine_errc_2_mcbp.cc:83:23: error: no member named "range_scan_more" in "cb::engine_errc"; did you mean "range_scan_mode"? [clang-diagnostic-error]
    case engine_errc::range_scan_more:
                      ^~~~~~~~~~~~~~~
                      range_scan_mode
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/engine_error.h:134:5: note: "range_scan_mode" declared here
    range_scan_mode = 0x27,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17060/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection.cc:379:27:
error: no member named "range_scan_more" in "cb::engine_errc"; did you mean "range_scan_mode"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17060/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19189/ : FAILURE

Compile error at [2022-04-27T13:08:17.079Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/utilities/engine_errc_2_mcbp.cc:83:23:
error: ?range_scan_more? is not a member of ?cb::engine_errc?; did you mean ?range_scan_mode??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19189/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19887/ : FAILURE

Compile error at [2022-04-27T13:08:23.714Z] ../kv_engine/engines/utilities/engine_error.cc:43:13:
error: enumeration value "range_scan_mode" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19887/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17985/ : FAILURE

Compile error at [2022-04-27T13:08:58.007Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/utilities/engine_errc_2_mcbp.cc:83:23:
error: no member named "range_scan_more" in "cb::engine_errc"; did you mean "range_scan_mode"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17985/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16028/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
